--- a/TestHarness/TestHarness.iOS/packages.config
+++ b/TestHarness/TestHarness.iOS/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Acr.Support" version="1.1.1" targetFramework="xamarinios10" />
+  <package id="Acr.UserDialogs" version="4.2.0" targetFramework="xamarinios10" />
+  <package id="Splat" version="1.6.2" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.0.0.6490" targetFramework="xamarinios10" />
 </packages>
